--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 \fancyhf{}
 \fancyhead[L]{\textbf{University of Waterloo}}
 \fancyhead[C]{\small{\textsc{CS 680 Project}}}
-\fancyhead[R]{\textsc{Dec.7 2025}}
+\fancyhead[R]{\textsc{Fall 2025}}
 \fancyfoot[C]{\thepage}
 
 % ---------- theorem environments ----------
